--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            MY life - is work
-            yes?
-            can you
+            <div class="header__nav">
+                <img src="./img/header/logo.svg" alt="logo" class="header__logo">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#">О компании</a></li>
+                    <li class="nav__item"><a href="#">Новости</a></li>
+                    <li class="nav__item"><a href="#">Новости</a></li>
+                    <li class="nav__item"><a href="#">Новости</a></li>
+                    <li class="nav__item"><a href="#">Новости</a></li>
+                    <li class="nav__item"><a href="#">Новости</a></li>
+                    <li class="nav__item"><a href="#">Новости</a></li>
+                </ul>
+                <img src="./img/header/search.svg" alt="search" class="nav__search">
+                <div class="header__lang">
+                    <a href="#" class="header__lang-item">Ru</a>
+                    <img src="./img/header/arow.svg" alt="">
+                </div>
+            </div>
+
         </div>
     </header>
 </body>
