--- a/index.html
+++ b/index.html
@@ -30,5 +30,46 @@
 
         </div>
     </header>
+
+    <main class="main">
+
+        <section class="first">
+            <div class="first__img">
+                <img src="./img/section-01/background.png" alt="">
+            </div>
+            <div class="container">
+                <div class="first__column">
+                    <div class="first__content">
+                        <h1 class="first__title">Тавимский морской порт VISMA</h1>
+                        <p class="first__text">Vel posuere nibh odio placerat massa vel tellus tortor. Varius eget nunc scelerisque etiam felis facilisi ante viverra sem. Nunc eros elementum.</p>
+                        <div class="first__about">
+                            <h3>О компании</h3>
+                            <img src="./img/section-01/arrow-rigft.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="first__blocks">
+                        <div class="first__card">
+                            <h3 class="card__title">услуги</h3>
+                            <p class="card__text">Погрузочно-разгрузочная деятельность</p>
+                        </div>
+                        <div class="first__card">
+                            <h3 class="card__title">услуги</h3>
+                            <p class="card__text">Хранение<br> грузов</p>
+                        </div>
+                        <div class="first__card">
+                            <h3 class="card__title">услуги</h3>
+                            <p class="card__text">Складские<br> операции</p>
+                        </div>
+                        <div class="first__card">
+                            <h3 class="card__title">услуги</h3>
+                            <p class="card__text">Швартовые<br> операции</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
