--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <div class="header__nav">
                 <img src="./img/header/logo.svg" alt="logo" class="header__logo">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#">О компании</a></li>
-                    <li class="nav__item"><a href="#">Новости</a></li>
-                    <li class="nav__item"><a href="#">Новости</a></li>
-                    <li class="nav__item"><a href="#">Новости</a></li>
-                    <li class="nav__item"><a href="#">Новости</a></li>
-                    <li class="nav__item"><a href="#">Новости</a></li>
-                    <li class="nav__item"><a href="#">Новости</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">О компании</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Новости</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Новости</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Новости</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Новости</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Новости</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Новости</a></li>
                 </ul>
                 <img src="./img/header/search.svg" alt="search" class="nav__search">
                 <div class="header__lang">
@@ -63,6 +63,54 @@
                         <div class="first__card">
                             <h3 class="card__title">услуги</h3>
                             <p class="card__text">Швартовые<br> операции</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="service">
+            <div class="container">
+                <div class="service__wrapper">
+                    <div class="service__info">
+                        <h3 class="service__title">Услуги</h3>
+                        <div class="service__item">
+                            <a href="#" class="service__link">Тарифы на услуги по обеспечению контроля доступа на территорию<br>VISMA на 2022 год</a>
+                            <span class="service__down">pdf</span>
+                        </div>
+                        <div class="service__item">
+                            <a href="#" class="service__link">Условия определения цены договора и тарифы на работы<br>VISMA на 2022 год</a>
+                            <span class="service__down">pdf</span>
+                        </div>
+                        <div class="service__item">
+                            <a href="#" class="service__link">Договор перевалки<br>(типовая форма)</a>
+                            <span class="service__down">pdf</span>
+                        </div>
+                    </div>
+                    <div class="service__block">
+                        <div class="service__card">
+                            <h3 class="service__card-title">услуги</h3>
+                            <p class="service__card-text">Хранение грузов</p>
+                        </div>
+                        <div class="service__card">
+                            <h3 class="service__card-title">услуги</h3>
+                            <p class="service__card-text">Хранение грузов</p>
+                        </div>
+                        <div class="service__card">
+                            <h3 class="service__card-title">услуги</h3>
+                            <p class="service__card-text">Хранение грузов</p>
+                        </div>
+                        <div class="service__card">
+                            <h3 class="service__card-title">услуги</h3>
+                            <p class="service__card-text">Хранение грузов</p>
+                        </div>
+                        <div class="service__card">
+                            <h3 class="service__card-title">услуги</h3>
+                            <p class="service__card-text">Хранение грузов</p>
+                        </div>
+                        <div class="service__card">
+                            <h3 class="service__card-title">услуги</h3>
+                            <p class="service__card-text">Хранение грузов</p>
                         </div>
                     </div>
                 </div>
