--- a/index.html
+++ b/index.html
@@ -117,6 +117,43 @@
             </div>
         </section>
 
+        <section class="about">
+            <div class="container">
+                <div class="about__title">
+                    <h3>О компании</h3>
+                </div>
+                <div class="about__wrapper">
+                    <div class="about__content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, minus beatae nostrum excepturi ipsa optio temporibus doloremque tempore veniam voluptatibus non officiis, consequuntur mollitia. Delectus quasi eligendi exercitationem asperiores incidunt.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, aut.</p>
+                        <ul>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, architecto!</li>
+                            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, sed alias.</li>
+                        </ul>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est harum dolores dolore nisi animi non, commodi quidem, quam nesciunt doloribus esse culpa, nostrum eum magni temporibus consequuntur? Consectetur, et animi?</p>
+                        <ul>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+                        </ul>
+                    </div>
+                    <div class="about__live">
+                        <div class="about__video">
+                            <img src="./img/about/img_card.png" alt="video" class="about__img">
+                        </div>
+                        <div class="about__card">
+                            <h3 class="about__card-title">Запрос ставки и условий погрузочно-разгрузочных работ</h3>
+                            <p class="about__card-text">Рассчитайте моментально стоимость полных портовых услуг в порту VISMA</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
