--- a/index.html
+++ b/index.html
@@ -154,6 +154,49 @@
             </div>
         </section>
 
+        <section class="news">
+            <div class="container">
+                <div class="news__title">
+                    <h3>Новости</h3>
+                    <a href="#">Все новости</a>
+                </div>
+                <div class="news__wrapper">
+                    <div class="news__card">
+                        <img src="./img/news/news-01.png" alt="news" class="news__card-img">
+                        <p class="news__card-data">20/05/22</p>
+                        <h4 class="news__card-title">Semper eu pulvinar eget integer</h4>
+                        <p class="news__card-text">
+                            Pretium duis phasellus netus ac. Nunc nibh nunc integer feugiat et aliquam cras. Amet pharetra montes ipsum gravida tellus tellus.
+                        </p>
+                    </div>
+                    <div class="news__card">
+                        <img src="./img/news/news-02.png" alt="news" class="news__card-img">
+                        <p class="news__card-data">20/05/22</p>
+                        <h4 class="news__card-title">Semper eu pulvinar eget integer</h4>
+                        <p class="news__card-text">
+                            Pretium duis phasellus netus ac. Nunc nibh nunc integer feugiat et aliquam cras. Amet pharetra montes ipsum gravida tellus tellus.
+                        </p>
+                    </div>
+                    <div class="news__card">
+                        <img src="./img/news/news-03.png" alt="news" class="news__card-img">
+                        <p class="news__card-data">20/05/22</p>
+                        <h4 class="news__card-title">Semper eu pulvinar eget integer</h4>
+                        <p class="news__card-text">
+                            Pretium duis phasellus netus ac. Nunc nibh nunc integer feugiat et aliquam cras. Amet pharetra montes ipsum gravida tellus tellus.
+                        </p>
+                    </div>
+                    <div class="news__card">
+                        <img src="./img/news/news-04.png" alt="news" class="news__card-img">
+                        <p class="news__card-data">20/05/22</p>
+                        <h4 class="news__card-title">Semper eu pulvinar eget integer</h4>
+                        <p class="news__card-text">
+                            Pretium duis phasellus netus ac. Nunc nibh nunc integer feugiat et aliquam cras. Amet pharetra montes ipsum gravida tellus tellus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
