--- a/index.html
+++ b/index.html
@@ -197,6 +197,75 @@
             </div>
         </section>
 
+        <section class="footer">
+            <div class="container">
+                <div class="footer__nav">
+                    <div class="footer__block">
+                        <img src="./img/footer/location.svg" alt="location">
+                        <a href="#">123456, г. Тавима, ул. Морская, д. 21</a>
+                    </div>
+                    <div class="footer__nav-logo">
+                        <img src="./img/footer/logor.svg" alt="logo">
+                    </div>
+                    <div class="footer__block">
+                        <img src="./img/footer/phone.svg" alt="location">
+                        <a href="#">+7 (123) 456-67-89</a>
+                    </div>
+                    <div class="footer__block">
+                        <img src="./img/footer/email.svg" alt="location">
+                        <a href="#">order@visma.ru</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                    <div class="info">
+                        <div class="info__card">
+                            <h3 class="info__title">информация о юр. лице</h3>
+                            <ul class="info__list">
+                                <li class="info__item">ОГРН 11111111111111111</li>
+                                <li class="info__item">ИНН 2222222222222</li>
+                                <li class="info__item">КПП 3333333333333</li>
+                                <li class="info__item">ОКПО 44444444444 ОКВЭД 52.24</li>
+                                <li class="info__item">ОКТМО 5555555555555</li>
+                            </ul>
+                        </div>
+                        <div class="info__card">
+                            <h3 class="info__title">Закупки</h3>
+                            <ul class="info__list">
+                                <li class="info__item">Нормативные документы</li>
+                                <li class="info__item">Закупки на VISMA Order</li>
+                                <li class="info__item">Закупки на VISMA Tender</li>
+                            </ul>
+                        </div>
+                        <div class="info__card">
+                            <h3 class="info__title">акционерам</h3>
+                            <ul class="info__list">
+                                <li class="info__item">Устав VISMA</li>
+                                <li class="info__item">Свидетельства госрегистрации</li>
+                                <li class="info__item">Список аффилированных лиц</li>
+                                <li class="info__item">Информация</li>
+                                <li class="info__item">Отчеты</li>
+                            </ul>
+                        </div>
+                        <div class="info__card">
+                            <h3 class="info__title">о компании</h3>
+                            <ul class="info__list">
+                                <li class="info__item">Порт сегодня</li>
+                                <li class="info__item">Характеристики порта</li>
+                                <li class="info__item">История</li>
+                                <li class="info__item">Дипломы и награды</li>
+                                <li class="info__item">Транспортная безопасность</li>
+                                <li class="info__item">Экология</li>
+                                <li class="info__item">Правовая информация</li>
+                            </ul>
+                        </div>
+                    </div>
+            </div>
+        </footer>
+
     </main>
 
 </body>
