--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body>
     <header class="header">
@@ -31,9 +32,9 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="main ">
 
-        <section class="first">
+        <section class="first none">
             <div class="first__img">
                 <img src="./img/section-01/background.png" alt="">
             </div>
@@ -69,7 +70,7 @@
             </div>
         </section>
 
-        <section class="service">
+        <section class="service none">
             <div class="container">
                 <div class="service__wrapper">
                     <div class="service__info">
@@ -154,7 +155,7 @@
             </div>
         </section>
 
-        <section class="news">
+        <section class="news none">
             <div class="container">
                 <div class="news__title">
                     <h3>Новости</h3>
@@ -197,7 +198,7 @@
             </div>
         </section>
 
-        <section class="footer">
+        <section class="footer none">
             <div class="container">
                 <div class="footer__nav">
                     <div class="footer__block">
@@ -219,7 +220,7 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="none">
             <div class="container">
                     <div class="info">
                         <div class="info__card">
