--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main class="main ">
 
-        <section class="first none">
+        <section class="first">
             <div class="first__img">
                 <img src="./img/section-01/background.png" alt="">
             </div>
@@ -70,7 +70,7 @@
             </div>
         </section>
 
-        <section class="service none">
+        <section class="service ">
             <div class="container">
                 <div class="service__wrapper">
                     <div class="service__info">
@@ -118,7 +118,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="about ">
             <div class="container">
                 <div class="about__title">
                     <h3>О компании</h3>
@@ -155,7 +155,7 @@
             </div>
         </section>
 
-        <section class="news none">
+        <section class="news ">
             <div class="container">
                 <div class="news__title">
                     <h3>Новости</h3>
@@ -198,7 +198,7 @@
             </div>
         </section>
 
-        <section class="footer none">
+        <section class="footer">
             <div class="container">
                 <div class="footer__nav">
                     <div class="footer__block">
@@ -220,7 +220,7 @@
             </div>
         </section>
 
-        <footer class="none">
+        <footer class="">
             <div class="container">
                     <div class="info">
                         <div class="info__card">
